I have added the oauth with swagger
